# kizzy-api-rs

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml
api/: Cargo.toml  start
api/src/: main.rs
api/src/routes/: config.rs
api/src/routes/handlers/: mod.rs
api/src/utils/: api_response.rs  constants.rs  discord.rs  github.rs  mod.rs  webhook.rs
games-gen/: Cargo.toml  README.md  games.json  games.toml
games-gen/src/: main.rs
games-gen/src/config/: mod.rs
games-gen/src/fetch/: discord.rs  mod.rs
games-gen/src/models/: mod.rs
games-gen/src/utils/: mod.rs
games-gen/src/xbox/: mod.rs
