[package]
name = "games-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
toml = "0.8.12"
serde ={ workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
csv = "1.3.0"